# webgpu-engine

./: .gitignore  CMakeLists.txt  Makefile.emscripten  README.md
src/: Camera.cpp  Camera.h  GalaxyWebSystem.cpp  GalaxyWebSystem.h  GridRenderer.cpp  GridRenderer.h  PointWebSystem.cpp  PointWebSystem.h  TriangleRenderer.cpp  TriangleRenderer.h  main.cpp
web/: index.html  index.js  index.wasm
